fixed display img on mobile

--- a/app/javascript/stylesheets/offers.scss
+++ b/app/javascript/stylesheets/offers.scss
@@ -30,7 +30,7 @@
   border-bottom: 2px solid #efefef;
 }
 .offer-img img {
-  max-height: 50px;
+  max-height: 40px;
 }
 .offer-percent {
   font-family: 'Comfortaa', cursive;
